{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 273,
  "lineage": "b8876510-7358-68ab-cb8f-6bdc53a014ca",
  "resources": [
    {
      "module": "module.gitbucket_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitbucket_appsrv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:security-group/sg-07a1885d1321c6bc9",
            "description": "Security group for GitBucket instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a1885d1321c6bc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gitbucket-appsrv-sg-prod",
            "name_prefix": "",
            "owner_id": "538547716265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitbucket-appsrv-sg-prod"
            },
            "tags_all": {
              "Name": "gitbucket-appsrv-sg-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d865313a751cbab3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gitbucket_network.aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gitbucket_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitbucket_database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:security-group/sg-0fba39a467a629e71",
            "description": "Security group for MySQL database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fba39a467a629e71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a1885d1321c6bc9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "gitbucket-database-sg-prod",
            "name_prefix": "",
            "owner_id": "538547716265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitbucket-database-sg-prod"
            },
            "tags_all": {
              "Name": "gitbucket-database-sg-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d865313a751cbab3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gitbucket_network.aws_security_group.gitbucket_appsrv_sg",
            "module.gitbucket_network.aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gitbucket_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket_datasubnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-06afeef12110ade7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06afeef12110ade7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-prod-datasubnet-01"
            },
            "tags_all": {
              "Name": "gitbucket-prod-datasubnet-01"
            },
            "vpc_id": "vpc-0d865313a751cbab3"
          },
          "dependencies": [
            "module.gitbucket_network.aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gitbucket_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitbucket_datasubnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:subnet/subnet-0a4b78a03845a0caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4b78a03845a0caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538547716265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitbucket-prod-datasubnet-02"
            },
            "tags_all": {
              "Name": "gitbucket-prod-datasubnet-02"
            },
            "vpc_id": "vpc-0d865313a751cbab3"
          },
          "dependencies": [
            "module.gitbucket_network.aws_vpc.gitbucket_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gitbucket_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gitbucket_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538547716265:vpc/vpc-0d865313a751cbab3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07db3050066f01a2d",
            "default_route_table_id": "rtb-06a9e7d69edae1c19",
            "default_security_group_id": "sg-01e1456d8610c88c1",
            "dhcp_options_id": "dopt-035a11267ce47a541",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d865313a751cbab3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a9e7d69edae1c19",
            "owner_id": "538547716265",
            "tags": {
              "Name": "gitbucket-prod-vpc"
            },
            "tags_all": {
              "Name": "gitbucket-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}